[B]0.7.5[/B]
 - Matrix compatibility

[B]0.7.4[/B]
 - Addon names shouldn't be utf-8 decoded

[B]0.7.4[/B]
 - Fix non ascii path encoding

[B]0.7.3[/B]
 - new remove HTML tags function

[B]0.7.2[/B]
 - more HTTP request parameters
 - got rid of setResolvedUrl, would be a nice feature if Kodi won't be buggy on init
  - old playing method has been reverted

[B]0.7.1[/B]
 - User-Agent fix for playbacks

[B]0.7.0[/B]
 - initial release