@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.mrdini.routines" name="Mr Dini's Common Routines" provider-name="Mr Dini" version="0.7.7">
+<addon id="script.module.mrdini.routines" name="Mr Dini's Common Routines" provider-name="Mr Dini" version="0.7.8">
     <requires>
         <!-- <import addon="xbmc.python" version="2.24.0"/> -->
         <import addon="script.module.requests"/>
