@@ -1,3 +1,6 @@
+[B]0.7.8[/B]
+ - Add ISA compatibility and setResolvedUrl support
+
 [B]0.7.5[/B]
  - Matrix compatibility
 
